# molecules

./: .gitattributes  .gitignore  .gitmessage  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FUZZING.md  README.md  RELEASE_READINESS.md  ROADMAP.md  SECURITY.md  fixes.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  pages.yml  scheduled-fuzz.yml  security.yml  static.yml  validation.yml
assets/: logos.af  logos.af~lock~
crates/molecular/: Cargo.toml
crates/molecular-dreiding/: Cargo.toml
crates/molecular-dreiding/examples/: ligand_workflow.rs
crates/molecular-dreiding/src/: error.rs  evaluate.rs  geometry.rs  lib.rs  prepare.rs  tests.rs
crates/molecular-dreiding/tests/: public_api.rs
crates/molecules/: Cargo.toml  LICENSE
crates/molecules-dreiding/: Cargo.toml
crates/molecules-dreiding/examples/: ligand_workflow.rs
crates/molecules-dreiding/src/: error.rs  evaluate.rs  geometry.rs  lib.rs  prepare.rs  tests.rs
crates/molecules-dreiding/tests/: public_api.rs
crates/molecules/examples/: basic_usage.rs
crates/molecules/src/: lib.rs  small.rs  units.rs
crates/molecules/src/algorithms/: aromaticity.rs  canonical.rs  cip.rs  hydrogens.rs  membership.rs  mod.rs  rings.rs  stereo.rs  substructure.rs  valence.rs
crates/molecules/src/bio/: hierarchy.rs  mod.rs  molecular_contents.rs
crates/molecules/src/chemistry/: mod.rs  sanitize.rs
crates/molecules/src/core/: atom_bond.rs  conformer.rs  ids.rs  mod.rs  molecule.rs  perception.rs  stereo.rs
crates/molecules/src/descriptors/: mod.rs
crates/molecules/src/dssp/: kernel.rs
crates/molecules/src/io/: mmcif.rs  mmcif_document.rs  mmcif_interpret.rs  mmcif_write.rs  mod.rs  sdf_document.rs  smiles.rs  structure_documents.rs  v2000.rs  v3000.rs
crates/molecules/src/modeling/: minimize.rs  mod.rs  model.rs  potential.rs  tests.rs
crates/molecules/src/query/: expression.rs  graph.rs  mod.rs  smarts.rs
crates/molecules/src/small/: model.rs  workflows.rs
crates/molecules/src/tests/: bio.rs  canonical.rs  chemistry.rs  cip.rs  core_payload.rs  graph.rs  hydrogens.rs  mmcif_contents.rs  mod.rs  perception.rs  public_api.rs  ring_limits.rs  smiles.rs  v2000.rs  v3000.rs
crates/molecules/tests/: dssp_public_api.rs  mmcif_public_api.rs  public_api.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: cli.rs  corpus.rs  dashboard.rs  features.rs  main.rs  skills.rs  support.rs  tests.rs
crates/xtask/src/validation/: compare.rs  evidence.rs  implementation.rs  manifest.rs  mod.rs  progress.rs  status.rs
examples/: ligand-minimized.sdf  receptor.cif
features/: DASHBOARD.html  DASHBOARD.md  registry.toml
features/_template/: algorithm.md  feature.md  feature.toml  spec.md  validation.md
features/algo.aromaticity.rdkit-like/: deep-research-report.md  feature.md  feature.toml
features/algo.aromaticity.rdkit-like-basic/: feature.md  feature.toml  implementation_plan.md
features/algo.canonical-ranking/: feature.md  feature.toml
features/algo.geometry-minimization/: feature.md  feature.toml
features/algo.rings.fast/: feature.md  feature.toml  implementation_plan.md
features/algo.rings.sssr/: feature.md  feature.toml
features/algo.substructure.vf2/: feature.md  feature.toml
features/algo.valence.rdkit-like/: feature.md  feature.toml
features/algo.valence.rdkit-like-basic/: feature.md  feature.toml
features/api.public-facade/: feature.md  feature.toml
features/bio.hierarchy.smcra/: feature.md  feature.toml  implementation_plan.md
features/bio.mmcif.interpret/: feature.md  feature.toml
features/bio.molecular-contents/: feature.md  feature.toml
features/bio.secondary-structure.dssp/: deep-research-report.md  feature.md  feature.toml
features/chem.hydrogen-normalization/: feature.md  feature.toml
features/chem.sanitize.rdkit-like/: feature.md  feature.toml
features/chem.sanitize.rdkit-like-basic/: feature.md  feature.toml
features/core.atom-bond/: feature.md  feature.toml  implementation_plan.md
features/core.conformer-properties/: feature.md  feature.toml
features/core.conformers/: feature.md  feature.toml
features/core.graph/: algorithm.md  feature.md  feature.toml  implementation_plan.md  spec.md  validation.md
features/core.units/: feature.md  feature.toml
features/dashboard.feature-registry/: feature.md  feature.toml  implementation_plan.md
features/descriptor.basic/: feature.md  feature.toml
features/descriptor.molecular/: feature.md  feature.toml
features/fp.morgan/: feature.md  feature.toml
features/fp.morgan.basic/: feature.md  feature.toml
features/io.mmcif.document/: feature.md  feature.toml
features/io.mmcif.parse/: feature.md  feature.toml  implementation_plan.md
features/io.mmcif.write/: feature.md  feature.toml
features/io.mol.v2000.parse/: feature.md  feature.toml
features/io.mol.v2000.write/: feature.md  feature.toml
features/io.mol.v3000.parse/: feature.md  feature.toml
features/io.mol.v3000.write/: feature.md  feature.toml
features/io.sdf.v2000.parse/: feature.md  feature.toml  implementation_plan.md
features/io.sdf.v2000.write/: feature.md  feature.toml
features/io.smiles.canonical/: deep-research-report.md  feature.md  feature.toml
features/io.smiles.isomeric/: feature.md  feature.toml
features/io.smiles.parse/: feature.md  feature.toml
fuzz/: Cargo.toml
fuzz/corpus/mmcif/: ragged-loop.cif  tiny.cif
fuzz/corpus/mol_v2000/: tiny.mol  zero-endpoint.mol
fuzz/corpus/mol_v3000/: tiny.mol
fuzz/corpus/sdf_v2000/: tiny.sdf  truncated-m-record.sdf
fuzz/corpus/smiles/: malformed-bracket.smi
fuzz/fuzz_targets/: mmcif.rs  mol_v2000.rs  mol_v3000.rs  sdf_v2000.rs  smiles.rs
validation/: README.md
(+452 files in other folders)
