[workspace]
resolver = "2"
members = [
    "crates/molecular",
    "crates/molecular-dreiding",
    "crates/xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
repository = "https://github.com/choutkaj/molecular"
license = "MIT"
readme = "README.md"
keywords = ["chemistry", "cheminformatics", "bioinformatics", "molecular-modeling"]
categories = ["science", "data-structures", "parser-implementations"]

[profile.dev.package.sha2]
opt-level = 3

[profile.dev.package.flate2]
opt-level = 3

[profile.dev.package.miniz_oxide]
opt-level = 3

[profile.dev.package.crc32fast]
opt-level = 3

[profile.dev.package.serde_json]
opt-level = 3

[profile.dev.package.memchr]
opt-level = 3

[profile.dev.package.zmij]
opt-level = 3
