[package]
name = "molecules-dreiding"
version = "0.0.0"
edition = "2024"
rust-version.workspace = true
repository.workspace = true
description = "DREIDING force-field adapter for molecules Model values."
publish = false

[dependencies]
dreid-forge = { version = "=0.4.2", default-features = false }
dreid-kernel = { version = "=0.4.2" }
molecules = { path = "../molecules" }
