[package]
name = "molecules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pure Rust cheminformatics and molecular-structure backend."
publish = true

[dependencies]
