[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
flate2 = "1"
molecules = { path = "../molecules" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
toml = "0.9"
